# axum-monorepo-template

./: .gitignore  Cargo.toml  cargo-generate.toml  config.toml.template  justfile
libs/entity/: Cargo.toml
libs/entity/src/: lib.rs  prelude.rs  user_account.rs
libs/migration/: Cargo.toml
main-service/: Cargo.toml
main-service/infrastructure/: config.rs  errors.rs  mod.rs  state.rs  uuid.rs
main-service/src/: logger.rs  main.rs  server.rs
main-service/src/dto/: auth.rs  base.rs  mod.rs  user.rs
main-service/src/extractor/: validator.rs
main-service/src/middleware/: auth.rs
main-service/src/repository/: user.rs
main-service/src/route/: mod.rs
