[package]
edition = "2021"
authors = ["{{authors}}"]

[workspace]
members = ["main-service", "libs/*"]
resolver = "2"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0" }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.39", features = ["now", "serde"] }
clap = { version = "4.5.9", features = ["env", "derive"] }
geojson = { version = "0.24.1" }
geozero = { version = "0.14.0", features = [
    "with-geojson",
    "with-wkb",
    {% if db_type == "postgresql" %}
    "with-postgis-sqlx",
    {% endif %}
] }
geo-types = { version = "0.7.14", features = ["serde"] }
lazy_static = "1.5.0"
moka = { version = "0.12.10", features = ["future"] }
regex = { version = "1.11.1" }
sea-orm = { version = "1.1.3", features = [
    {% if db_type == "postgresql" %}
    "sqlx-postgres"
    {% else %}
    "sqlx-sqlite"
    {% endif %}
    "macros",
    "with-json",
    "serde_json",
    "runtime-tokio",
] }
sea-query = "^0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "2.0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.15" }
toml = "0.8.19"
tower = { version = "0.5.2", features = ["timeout", "buffer", "limit"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
tracing = { version = "0.1.40" }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["fast-rng", "v7", "serde"] }
validator = { version = "0.19.0", features = ["derive"] }
