[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
argon2 = "0.5.3"
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
entity = { path = "../libs/entity" }
geojson = { workspace = true }
geozero = { workspace = true }
geo-types = { workspace = true }
image = { workspace = true }
jsonwebtoken = { version = "9.3.0" }
lazy_static = "1.5.0"
migration = { path = "../libs/migration" }
moka = { workspace = true }
qrcode = { workspace = true }
regex = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
uuid = { workspace = true }
